<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="4dip"
            android:padding="4dip"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/empty_text"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/appIcon"
            android:textStyle="bold"
            android:layout_margin="2dip"
            android:layout_gravity="start"
            android:text="@string/app_version" />

        <TextView
            android:id="@+id/appDeveloper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/appIcon"
            android:layout_below="@+id/appVersion"
            android:layout_gravity="start"
            android:layout_margin="2dip"
            android:text="@string/app_developer_info" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/appIcon"
            android:layout_below="@+id/appDeveloper"
            android:layout_gravity="start"
            android:layout_margin="2dip"
            android:text="@string/app_copyright" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:layout_margin="5dip"
        android:background="@android:color/darker_gray" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/app_desc" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:layout_margin="5dip"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dip"
        android:text="@string/app_disclaim" />

</LinearLayout>