<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dddddd"
    android:measureWithLargestChild="false"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:context=".MainActivity" >

    <!-- <android.support.v4.widget.DrawerLayout></android.support.v4.widget.DrawerLayout> -->
    <!-- Next match will be highlighted here -->

    <LinearLayout
        android:id="@+id/nextMatchDetailsContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/margin_medium" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.85"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables" >

                <TextView
                    android:id="@+id/nextMatchDateText"
                    style="@style/MediumSizedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_text"
                    android:textColor="@color/holo_red_dark" />

                <TextView
                    android:id="@+id/nextMatchStadiumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:text="@string/empty_text"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/nextMatchOpponentText"
                style="@style/EmphasisedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_text" />

            <TextView
                android:id="@+id/nextMatchCompetitionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_text"
                android:textColor="@color/holo_orange_dark" />
        </LinearLayout>

        <!-- A Separator -->

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/holo_green_light" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.15"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="2dip"
            android:paddingRight="0dip" >

            <!-- Share icon -->

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/share_button"
                android:contentDescription="@string/empty_text"
                android:padding="2dip" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:id="@+id/nextMatchVenueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingBottom="4dip"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:paddingTop="4dip"
                android:text="@string/empty_text" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/empty_text"
                android:padding="4dip"
                android:src="@drawable/ic_action_important"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <!-- Rest of the matches -->

    <LinearLayout
        android:id="@+id/listContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@android:id/empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dip"
                android:gravity="center_vertical"
                android:text="@string/empty_list" />
        </LinearLayout>
    </LinearLayout>

    <!-- about button -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/aboutApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dip"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/padding_medium"
            android:text="@string/action_about"
            android:textColor="@color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>